[package]
name = "knowledge-discovery"
version = "0.1.0"
description = "KnowledgeDiscovery desktop app"
authors = ["KnowledgeDiscovery"]
edition = "2021"

[lib]
name = "knowledge_discovery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
